--- a/www.jotform.com/form/213124822525852.html
+++ b/www.jotform.com/form/213124822525852.html
@@ -1803,7 +1803,7 @@ div.form-header-group.header-large {
 </script>
 </head>
 <body>
-<form class="jotform-form" action="https://submit.jotform.com/submit/213124822525852/" method="post" name="form_213124822525852" id="213124822525852" accept-charset="utf-8" autocomplete="on">
+<form class="jotform-form" action="" method="post" name="form_213124822525852" id="213124822525852" accept-charset="utf-8" autocomplete="on">
   <input type="hidden" name="formID" value="213124822525852" />
   <input type="hidden" id="JWTContainer" value="" />
   <input type="hidden" id="cardinalOrderNumber" value="" />
