--- a/www.jotform.com/form/213124822525852.html
+++ b/www.jotform.com/form/213124822525852.html
@@ -1944,7 +1944,7 @@ div.form-header-group.header-large {
       <li class="form-line" data-type="control_button" id="id_2">
         <div id="cid_2" class="form-input-wide" data-layout="full">
           <div data-align="auto" class="form-buttons-wrapper form-buttons-auto   jsTest-button-wrapperField">
-            <button id="input_2" type="submit" class="form-submit-button form-submit-button-simple_carolina_blue submit-button jf-form-buttons jsTest-submitField" data-component="button" data-content="">
+            <button id="input_2" type="" class="" data-component="button" data-content="">
               Enviar
             </button>
           </div>
